2008-06-02  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/main.c: (main): Use GOptionContext to parse options.
	* capplet/nwam-manager-properties.glade: Enable match_all|any_rbtn by
	default.
	* capplet/nwam_conn_conf_ip_panel.c: (show_changed_cb): Ipv6 lable uses
	mnemonic.
	* common/nwamui_daemon.c: Removed the very long essid.

2008-05-28  Darren Kenny  <darren.kenny@sun.com>

	* capplet/Makefile.am, daemon/Makefile.am:
	  Add NWAM_LIBS to link flags.
	* configure.in:
	  Add libnwam and -lnsl to link flags.
	* help/legal.xml, help/nwam-manager.xml:
	  Add template help docs (but need to install still).
	* capplet/main.c: (main):
	  Call gnome_program_init() to correctly start program to stop crashing
	  when GNOME Help called.
	* common/nwamui_daemon.c, common/nwamui_env.c,
	  common/nwamui_env.h, common/nwamui_svc.c,
	  common/nwamui_svc.h:
	  Fix references to enable build with newer libnwam impl.

2008-05-09  Calum Benson  <calum.benson@sun.com>

	* capplet/nwam-manager-properties.glade:

	s/Name/Profile on connection status page.

2008-05-01  Calum Benson  <calum.benson@sun.com>

	* capplet/nwam-manager-properties.glade:

	First stab at network services tab.

2008-04-29  Calum Benson  <calum.benson@sun.com>

	* capplet/nwam_pref_dialog.c: (show_changed_cb),
	(show_combo_cell_cb):

	s/Network Configuration/Network Profile in GUI.

2008-04-28  Calum Benson <calum.benson@sun.com>

	* capplet/nwam-manager-properties.glade

	Add controls for showing/selecting NCP, of which we'll now 
	have two in Phase I. (Work in progress, may require 
	further tweaking.)

2008-04-03  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_env_pref_dialog.c: (_cu_cond_combo_filter_value),
	(condition_field_op_changed_cb), (condition_value_changed_cb),
	(_cu_cond_combo_cell_cb), (_cu_cond_combo_filter_visible_cb),
	(_cu_cond_combo_new), (table_one_line_state), (table_lines_init),
	(table_conditon_new): Fix some parts of conditions, need more work.